# rustls-cng

./: .gitignore  Cargo.toml  README.md
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/convert/: trait.From.js
doc/implementors/core/error/: trait.Error.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/drop/: trait.Drop.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/core/str/traits/: trait.FromStr.js
doc/implementors/rustls/sign/: trait.SigningKey.js
doc/implementors/std/error/: trait.Error.js
doc/rustls_cng/: all.html  index.html  sidebar-items.js  type.Result.html
doc/rustls_cng/cert/: index.html  sidebar-items.js  struct.CertContext.html
doc/rustls_cng/error/: enum.CngError.html  index.html  sidebar-items.js
doc/rustls_cng/key/: enum.AlgorithmGroup.html  enum.SignaturePadding.html  index.html  sidebar-items.js  struct.NCryptKey.html
doc/rustls_cng/signer/: index.html  sidebar-items.js  struct.CngSigningKey.html
doc/rustls_cng/store/: enum.CertStoreType.html  index.html  sidebar-items.js  struct.CertStore.html
doc/search.desc/rustls_cng/: rustls_cng-desc-0-.js
doc/src/rustls_cng/: cert.rs.html  error.rs.html  key.rs.html  lib.rs.html  signer.rs.html  store.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
doc/trait.impl/core/error/: trait.Error.js
doc/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
doc/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/ops/drop/: trait.Drop.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/trait.impl/core/str/traits/: trait.FromStr.js
doc/trait.impl/rustls/crypto/signer/: trait.SigningKey.js
doc/type.impl/core/result/: enum.Result.js
examples/: client.rs  server.rs
src/: cert.rs  error.rs  key.rs  lib.rs  main.rs  resolver.rs  signer.rs  store.rs
tests/: test_client_server.rs  test_find.rs  test_sign.rs
tests/assets/: rustls-client.pfx  rustls-ec.p12  rustls-server.pfx
