[package]
name = "rustls-cng"
version = "0.3.3"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Windows CNG API bridge for rustls"
license = "MIT/Apache-2.0"
repository = "https://github.com/rustls/rustls-cng"
documentation = "https://rustls.github.io/rustls-cng/doc/rustls_cng"
readme = "README.md"
keywords = ["cng", "tls", "rustls", "windows"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
rustls = { git = "https://github.com/rustls/rustls" }
sha2 = "0.10"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustls-pki-types = "0.2"
