[package]
name = "rustls-cng"
version = "0.5.0"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Windows CNG API bridge for rustls"
license = "MIT/Apache-2.0"
repository = "https://github.com/rustls/rustls-cng"
documentation = "https://rustls.github.io/rustls-cng/doc/rustls_cng"
readme = "README.md"
keywords = ["cng", "tls", "rustls", "windows"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
rustls = { git = "https://github.com/rustls/rustls.git", default-features = false, features = ["std"] }
sha2 = "0.10"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
aws-lc-rs = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustls-pki-types = "1"

[features]
default = ["logging", "tls12", "aws-lc-rs"]
aws-lc-rs = ["rustls/aws_lc_rs"]
early-data = []
aws-lc-bindgen = ["aws-lc-rs/bindgen"]
fips = ["rustls/fips"]
logging = ["rustls/logging"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]
